# ChangeLog for dev-java/hibernate-entitymanager
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Mar 2007; William L. Thomson Jr. <wltjr@gentoo.org> ChangeLog:
  Updated dep on javassist to reflect it's new slot

  12 Feb 2007; kiorky <kiorky@cryptelium.net>
  +hibernate-entitymanager-3.2.0.ebuild, metadata.xml:
  Added as a jboss dependency
  see #166448
