@@ -1,5 +1,5 @@
 DIST hibernate-3.2.0.ga.tar.gz 19744419 RMD160 2ff9d9eea209ec5247854a28050a2104ebbec048 SHA1 3ad8f6ead464e9d8d5471631a2afccc83c8dcf14 SHA256 e242eb6b243e7b0fac132f37f4e29bf06ec87c37be5a80a0849709a6cb89b03f
 DIST hibernate-entitymanager-3.2.0.GA.tar.gz 1498934 RMD160 39c2d9b1ed9d74cc7baefee8718e7f939b9d660e SHA1 3cea6f29ef1ce0e07650874e21e4354c686972c2 SHA256 8d14c24a9f70f12d601e6bc4c8c21838b20c07fb7089b98e8f44e265fea48c42
-EBUILD hibernate-entitymanager-3.2.0.ebuild 2014 RMD160 d23d5008eb2789ad885a8ae06d25489083f61dd4 SHA1 6bef88ad6e7b79cdfe5f43a77754a8d91c27abbd SHA256 104188d169a3a0864549c3eaec624594f1799ad9f93e3761fde9438b6fa93aca
-MISC ChangeLog 400 RMD160 660ed9dee229f206f2ccb41780e72701016f19f3 SHA1 58ec2281d2317bdbbcc8be2034c18b42d23896d7 SHA256 f1be9bb3268725f30297b6ca2666ca59f2e023c242500f7d3f6cacef6005748a
+EBUILD hibernate-entitymanager-3.2.0-r1.ebuild 1990 RMD160 4765d987bd382bb9ddbc80287205e31915d15523 SHA1 b391f22f1da716e1cf4233b1c2d44fc0da8d3ef0 SHA256 afc0b4c5bde9d131d7e5a42d791e1ad6a65ee7af537db202f6f510e5458cc118
+MISC ChangeLog 512 RMD160 3922d1550ca99dd9242eb17624cd800aacb0a794 SHA1 d4d243041afa8dec0efc82bdaad84a10b173f162 SHA256 85e3169257dfb95a1c5c6db78c49273bb1af2d8e6b22042b77f64028ce62f9fe
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
